src/styles/global.css
@import './vars.css';

#gatsby-focus-wrapper {
  display: flex;
  flex-direction: row;
  width: 100%;
}

.gatsby-resp-image-wrapper {
  /* !important is required here because Gatsby sets it as inline styles ¯\_(ツ)_/¯ */
  margin: 0 !important;
}

html {
  background-color: var(--primary-bg-color);
}

article,
aside,
details,
div,
figcaption,
figure,
footer,
header,
main,
mark,
nav,
section,
summary,
time,
ul,
button {
  display: flex;
  flex-direction: column;
}

p,
button,
small,
figure,
a,
li,
h1,
h2,
h3,
h4,
h5,
h6 {
  color: var(--primary-text-color);
  font-family: 'Open Sans';
  font-weight: 500;
  -webkit-font-smoothing: antialiased;
}

p,
a,
li,
button {
  font-size: 1.125rem;
  line-height: 1.875rem;

  @media $midScreenMedia {
    font-size: 1.25rem;
    line-height: 2rem;
  }
}

figure {
  margin: 0;
}

figure figcaption,
figure figcaption a {
  align-self: center;
  color: $secondaryTextColorLight;
  font-size: 0.875rem;
  line-height: 1.25rem;
  margin-top: 0.25rem;
}

p {
  @media $xxsmallScreenMedia {
    margin-block-start: 0.625rem;
    margin-block-end: 0.625rem;
  }
  @media $midScreenMedia {
    margin-block-start: 0.75rem;
    margin-block-end: 0.75rem;
  }
}

a {
  color: var(--primary-link-color);
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
}

small,
small a {
  font-size: 0.875rem;
  line-height: 1.375rem;
}

h1 {
  margin-block-end: 1.5rem;
  margin-block-start: 2.25rem;
}

h1,
h1 a {
  font-weight: 700;

  @media $xxsmallScreenMedia {
    font-size: 2rem;
    line-height: 2.5rem;
  }
  @media $xsmallScreenMedia {
    font-size: 2.25rem;
    line-height: 2.75rem;
  }
  @media $smallScreenMedia {
    font-size: 2.75rem;
    line-height: 3.25rem;
  }
  @media $midScreenMedia {
    font-size: 4rem;
    line-height: 4.5rem;
  }
}

h2 {
  margin-block-end: 1.125rem;
  margin-block-start: 2.25rem;
}

h2,
h2 a {
  font-weight: 600;

  @media $xxsmallScreenMedia {
    font-size: 1.75rem;
    line-height: 2.25rem;
  }
  @media $xsmallScreenMedia {
    font-size: 2rem;
    line-height: 2.5rem;
  }
  @media $smallScreenMedia {
    font-size: 2.5rem;
    line-height: 3rem;
  }
  @media $midScreenMedia {
    font-size: 3.25rem;
    line-height: 3.75rem;
  }
}

h3 {
  margin-block-end: 1.125rem;
  margin-block-start: 2rem;
}

h3,
h3 a {
  font-weight: 600;

  @media $xxsmallScreenMedia {
    font-size: 1.75rem;
    line-height: 2.25rem;
  }
  @media $xsmallScreenMedia {
    font-size: 2rem;
    line-height: 2.5rem;
  }
  @media $smallScreenMedia {
    font-size: 2.5rem;
    line-height: 3rem;
  }
  @media $midScreenMedia {
    font-size: 2.75rem;
    line-height: 3.25rem;
  }
}

h4 {
  margin-block-end: 1rem;
  margin-block-start: 2rem;
}

h4,
h4 a {
  font-weight: 500;

  @media $xxsmallScreenMedia {
    font-size: 1.5rem;
    line-height: 2rem;
  }
  @media $xsmallScreenMedia {
    font-size: 1.875rem;
    line-height: 2.375rem;
  }
  @media $smallScreenMedia {
    font-size: 2rem;
    line-height: 2.5rem;
  }
  @media $midScreenMedia {
    font-size: 2.25rem;
    line-height: 2.75rem;
  }
}

h5 {
  margin-block-end: 1rem;
  margin-block-start: 1.5rem;
}

h5,
h5 a {
  font-weight: 500;

  @media $xxsmallScreenMedia {
    font-size: 1.375rem;
    line-height: 1.875rem;
  }
  @media $xsmallScreenMedia {
    font-size: 1.375rem;
    line-height: 1.875rem;
  }
  @media $smallScreenMedia {
    font-size: 1.5rem;
    line-height: 2rem;
  }
  @media $midScreenMedia {
    font-size: 1.75rem;
    line-height: 2.25rem;
  }
}

h6 {
  margin-block-end: 1rem;
  margin-block-start: 1.25rem;
}

h6,
h6 a {
  font-weight: 500;

  @media $xxsmallScreenMedia {
    font-size: 1.25rem;
    line-height: 1.75rem;
  }
  @media $xsmallScreenMedia {
    font-size: 1.25rem;
    line-height: 1.75rem;
  }
  @media $smallScreenMedia {
    font-size: 1.375rem;
    line-height: 1.875rem;
  }
  @media $midScreenMedia {
    font-size: 1.5rem;
    line-height: 2rem;
  }
}

ul {
  margin-block-start: 0.25rem;
  margin-block-end: 0;

  @media $xxsmallScreenMedia {
    padding-left: 1rem;
  }
  @media $midScreenMedia {
    padding-left: 2rem;
  }
}

ul li {
  display: list-item;
  list-style-type: none;
  margin: 0.5rem 0;
  position: relative;

  @media $xxsmallScreenMedia {
    padding-left: 0.75rem;
  }
  @media $midScreenMedia {
    padding-left: 1rem;
  }
}

ul li::before {
  background-color: var(--primary-text-color);
  border-radius: 50%;
  content: '';
  display: block;
  position: absolute;

  @media $xxsmallScreenMedia {
    top: 0.75rem;
    left: -0.125rem;
    width: 0.375rem;
    height: 0.375rem;
  }
  @media $midScreenMedia {
    top: 0.75rem;
    left: -0.25rem;
    width: 0.5rem;
    height: 0.5rem;
  }
}

img {
  max-width: 100%;
}

resume-page ul li a {
  color: var(--primary-text-color);
}

.resume-page ul li a:hover {
  color: var(--primary-link-color);
}

button {
  align-items: center;
  background-color: transparent;
  border-color: transparent;
  border-width: 1px;
  border-radius: 0.25rem;
  flex-direction: row;
  padding: 0 0.5rem;
}

button:hover {
  color: var(--primary-bg-color);
  cursor: pointer;
}

svg {
  display: flex;
}

html.theme-dark .svgLight {
  display: none;
}

html.theme-light .svgDark {
  display: none;
}

code {
  border-radius: 0.25rem;
}

:not(pre) > code {
  padding: 0.125rem 0.25rem;
}

html.theme-light :not(pre) > code {
  background-color: #0d1117;
  color: $primaryTextColorDark;
}

html.theme-dark :not(pre) > code {
  background-color: $primaryBgColorLight;
  color: $primaryTextColorLight;
}

html.theme-dark .hljs {
  background: $primaryBgColorLight;
}

#main-nav.active {
  height: 370px;
}

h3 .autolink-header-anchor.before {
  top: 0.75rem;

  svg {
    width: 2rem;
    height: 2rem;
  }
}

#disqus_thread {
  margin-top: 4rem;
}

/* That's the only way I could change disqus' background color, only for the light theme.
 * It seems there's no support for both light and dark, and when I tried only "dark" it didn't work
 * at all, i.e., it applied disqus' default styling (white background-color, etc).
 */
iframe {
  color-scheme: light;
}
/**/

